# ContextIQ

./: .env.auth.example  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DOCKER.md  LICENSE  Makefile  README.md  alembic.ini  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  pr-checks.yml
alembic/: env.py
alembic/versions/: 20251204_1312_initial_schema.py
docs/: API_USAGE.md  ARCHITECTURE.md  AUTHENTICATION.md  DATABASE_MIGRATIONS.md  DEPLOYMENT.md  DEVELOPMENT.md  EMBEDDINGS.md  MEMORY_LIFECYCLE.md  MESSAGING.md  PROCESSING_LAYER.md  README.md  VECTOR_SEARCH.md  agent_engine_memory_bank_research.md  anthropic_context_engineering.md  paper_summary.md
docs/architecture/: data_models.md  system_architecture.md
docs/pr_summaries/: PR_001_project_foundation.md
scripts/: db_init.py  db_migrate.py  generate_auth_config.py  health_check.py  init_db.sql  init_extensions.py  init_qdrant.py  init_rabbitmq.py
services/gateway/: Dockerfile  requirements.txt
services/gateway/app/: main.py
services/memory/: Dockerfile  requirements.txt
services/memory/app/: main.py
services/memory/app/api/: __init__.py  health.py
services/memory/app/core/: __init__.py  config.py  (+1 more)
services/sessions/: Dockerfile  __init__.py
services/sessions/app/: __init__.py  main.py
services/sessions/tests/: __init__.py
shared/: exceptions.py
shared/auth/: README.md  api_key.py  config.py  dependencies.py  jwt.py  middleware.py  models.py
shared/cache/: __init__.py  cache_manager.py  config.py  keys.py  redis_client.py  requirements.txt
shared/clients/: README.md  TODO.md  __init__.py  base.py  config.py  memory_client.py  sessions_client.py
shared/config/: __init__.py  logging.py  settings.py
shared/consolidation/: __init__.py  config.py  engine.py
shared/database/: __init__.py  base.py  config.py  connection.py  requirements.txt  session.py  utils.py
shared/embedding/: __init__.py  config.py  requirements.txt  service.py
shared/extraction/: __init__.py  config.py  engine.py  llm_client.py  prompts.py  requirements.txt
shared/messaging/: __init__.py  config.py  consumer.py  publisher.py  queues.py  rabbitmq_client.py  requirements.txt
shared/models/: __init__.py  extraction.py  memory.py  session.py
shared/observability/: __init__.py  metrics.py  middleware.py  tracing.py
shared/rate_limiter/: __init__.py  config.py  limiter.py  requirements.txt
shared/schemas/: __init__.py  base.py  config.py  memory.py  session.py
shared/utils/: __init__.py  datetime_utils.py  scope_utils.py  validation.py
shared/vector_store/: __init__.py  collections.py  config.py  qdrant_client.py  requirements.txt
tests/: __init__.py  conftest.py
tests/database/: conftest.py  test_connection.py  test_models.py  test_session.py  test_utils.py
tests/integration/: test_health_check.py  test_qdrant_connection.py  test_qdrant_init.py  test_rabbitmq_init.py
workers/: __init__.py
workers/consolidation/: Dockerfile  __init__.py  config.py  models.py  processor.py  worker.py
workers/memory_generation/: Dockerfile  __init__.py  config.py  models.py  processor.py  requirements.txt  worker.py
(+76 files in other folders)
